<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:alpha="0.7"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="Settings"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chats"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/chat"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/home"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/notifications"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/notifications"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/settings"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/settings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit_profile_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/edit_profile"
                app:layout_constraintBottom_toBottomOf="@+id/edit_profile_btn"
                app:layout_constraintEnd_toStartOf="@+id/edit_profile_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edit_profile_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_profile_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/div_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/edit_profile_btn"
                app:layout_constraintStart_toStartOf="@id/edit_profile_txt"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_btn" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/change_phone_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/change_phone_number"
                app:layout_constraintBottom_toBottomOf="@+id/change_phone_btn"
                app:layout_constraintEnd_toStartOf="@+id/change_phone_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/change_phone_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/change_phone_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_1" />

            <View
                android:id="@+id/div_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/change_phone_btn"
                app:layout_constraintStart_toStartOf="@id/change_phone_txt"
                app:layout_constraintTop_toBottomOf="@id/change_phone_btn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/notifications_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/notifications"
                app:layout_constraintBottom_toBottomOf="@+id/notifications_btn"
                app:layout_constraintEnd_toStartOf="@+id/notifications_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notifications_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/notifications_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_2" />

            <View
                android:id="@+id/div_3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/notifications_btn"
                app:layout_constraintStart_toStartOf="@id/notifications_txt"
                app:layout_constraintTop_toBottomOf="@id/notifications_btn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/get_help_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/get_help"
                app:layout_constraintBottom_toBottomOf="@+id/get_help_btn"
                app:layout_constraintEnd_toStartOf="@+id/get_help_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/get_help_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/get_help_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_3" />

            <View
                android:id="@+id/div_4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/get_help_btn"
                app:layout_constraintStart_toStartOf="@id/get_help_txt"
                app:layout_constraintTop_toBottomOf="@id/get_help_btn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/report_problems_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/report_problem"
                app:layout_constraintBottom_toBottomOf="@+id/report_problems_btn"
                app:layout_constraintEnd_toStartOf="@+id/report_problems_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/report_problems_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/report_problems_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_4" />

            <View
                android:id="@+id/div_5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/report_problems_btn"
                app:layout_constraintStart_toStartOf="@id/report_problems_txt"
                app:layout_constraintTop_toBottomOf="@id/report_problems_btn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/terms_of_use_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/terms_of_use"
                app:layout_constraintBottom_toBottomOf="@+id/terms_of_use_btn"
                app:layout_constraintEnd_toStartOf="@+id/terms_of_use_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/terms_of_use_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/terms_of_use_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/chevron_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_5" />

            <View
                android:id="@+id/div_6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/terms_of_use_btn"
                app:layout_constraintStart_toStartOf="@id/terms_of_use_txt"
                app:layout_constraintTop_toBottomOf="@id/terms_of_use_btn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logout_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="@+id/logout_btn"
                app:layout_constraintEnd_toStartOf="@+id/logout_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logout_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logout_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_6" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#606060"
                app:layout_constraintEnd_toEndOf="@id/logout_btn"
                app:layout_constraintStart_toStartOf="@id/logout_txt"
                app:layout_constraintTop_toBottomOf="@id/logout_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/orders"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/jobs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/services"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/services"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/jobs_settings"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/services" />

</androidx.constraintlayout.widget.ConstraintLayout>